--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "planchette",
+  "name": "penrose-site",
   "version": "0.1.0",
   "description": "A prototype boilerplate",
   "repository": {
@@ -13,7 +13,8 @@
     "gulp-concat": "^2.2.0",
     "gulp-embedlr": "^0.5.2",
     "gulp-livereload": "^1.3.1",
-    "gulp-sass": "^1.3.3"
+    "gulp-sass": "^1.3.3",
+    "gulp-preprocess": "^1.2.0"
   },
   "dependencies": {
     "express": "~4.6.1",
